examples/test/testpolicy6278.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6278
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key46: value40
      key24: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value24
          key39: value2
      podSelector:
        matchLabels:
          key43: value1
